--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,10 @@ body {
   text-align: center;
 }
 
+.modebar {
+  display: none !important;
+}
+
 .create_container2 {
   align-items: center;
   border-radius: 15px;
