actualizacion mainapp y archivo excel feb del 1 al 23 2022

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,6 +24,12 @@ body {
   gap: 10px;
 }
 
+.flex_container2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .chart {
   display: flex;
   flex-direction: row;
